@@ -489,6 +489,12 @@ handler_t stat_cache_get_entry(server *srv, connection *con, buffer *name, stat_
 
 
 	if (S_ISREG(st.st_mode)) {
+		/* fix broken stat/open for symlinks to reg files with appended slash on freebsd,osx */
+		if (name->ptr[name->used-2] == '/') {
+			errno = ENOTDIR;
+			return HANDLER_ERROR;
+		}
+
 		/* try to open the file to check if we can read it */
 		if (-1 == (fd = open(name->ptr, O_RDONLY))) {
 			return HANDLER_ERROR;
